# yaaai

./: .gitignore  README.md  pyproject.toml
src/yaaai/: __init__.py
